--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/applicationContext.xml
-            <!--/WEB-INF/application-security.xml-->
+            /WEB-INF/application-security.xml
             /WEB-INF/SpringConfig.xml
         </param-value>
     </context-param>
@@ -46,7 +46,7 @@
         <filter-name>CharsetFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>      
-<!--    <filter>
+    <filter>
 	<filter-name>springSecurityFilterChain</filter-name>
 	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
@@ -54,6 +54,6 @@
     <filter-mapping>
 	<filter-name>springSecurityFilterChain</filter-name>
 	<url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
     
 </web-app>
