--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,12 @@
             <version>5.1.3.Final</version>
         </dependency>
         
-        <dependency>
+<!--        <dependency>
             <groupId>unknown.binary</groupId>
             <artifactId>hibernate-jpamodelgen-4.3.1.Final</artifactId>
             <version>SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
@@ -94,9 +94,9 @@
         </dependency>
         
         <dependency>
-	<groupId>commons-validator</groupId>
-	<artifactId>commons-validator</artifactId>
-	<version>1.4.1</version>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.4.1</version>
         </dependency>
                 <!-- Core utilities used by other modules.
             Define this if you use Spring Utility APIs 
