--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,8 @@
         <param-value>
             /WEB-INF/applicationContext.xml
             /WEB-INF/application-security.xml
-            /WEB-INF/SpringConfig.xml
+            classpath:/SpringConfig.xml
+            classpath:/Repository.xml
         </param-value>
     </context-param>
     <listener>
@@ -17,7 +18,7 @@
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>2</load-on-startup>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
